--- a/UnionFindVisualizer/UnionFindVisualizer.csproj
+++ b/UnionFindVisualizer/UnionFindVisualizer.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataStructuresIntro\DataStructures.csproj" />
+  </ItemGroup>
+
 </Project>
